# hybrid-stream

./: .gitignore  CONTRIBUTING.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PLAN.md  README.md  paper.md
aode/: Dockerfile  pyproject.toml
aode/aode/: config.py  main.py
aode/aode.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aode/aode/etcd/: client.py
aode/aode/grpc/: clients.py  hybridstream_pb2.py  hybridstream_pb2_grpc.py  server.py
aode/aode/migration/: pctr.py
aode/aode/placement/: optimizer.py  state.py
aode/aode/scoring/: algorithm.py  weights.py
aode/aode/telemetry/: collector.py
aode/tests/: conftest.py  test_config.py  test_etcd_client.py  test_grpc_clients.py  test_grpc_server.py  test_leader_election.py  test_pctr.py  test_placement_optimizer.py  test_placement_state.py  test_scoring_algorithm.py  test_telemetry_collector.py  test_weights.py
experiments/: pyproject.toml
experiments/analysis/: plots.py  stats.py  tables.py
experiments/harness/: baselines.py  config.py  network.py  runner.py
experiments/metrics/: collector.py  storage.py
experiments/results/W1-B1-N1/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W1-B1-N2/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W1-B1-N3/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W1-B2-N1/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W1-B2-N2/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W1-B2-N3/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W1-HybridStream-N1/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W1-HybridStream-N2/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W1-HybridStream-N3/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W2-B1-N1/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W2-B1-N2/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W2-B1-N3/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W2-B2-N1/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W2-B2-N2/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W2-B2-N3/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W2-HybridStream-N1/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W2-HybridStream-N2/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W2-HybridStream-N3/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/results/W3-B1-N1/: rep_01.parquet  rep_02.parquet  rep_03.parquet  rep_04.parquet  rep_05.parquet  rep_06.parquet  rep_07.parquet  rep_08.parquet  rep_09.parquet  rep_10.parquet
experiments/scripts/: generate_synthetic.py  run_all.sh  run_analysis.py  setup_netem.sh
experiments/tests/: test_collector.py  test_stats.py  test_storage.py
hea/: Dockerfile  pyproject.toml
hea/hea/: config.py  main.py  metrics.py  operator_registry.py
hea/tests/: conftest.py  test_base_operator.py  test_checkpoint.py  test_config.py  test_decorators.py  test_engine.py  test_grpc_server.py  test_kafka_producer.py  test_metrics.py  test_operator_registry.py  test_snapshot.py  test_state_store.py
hybridstream-common/: pyproject.toml
hybridstream-common/hybridstream_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hybridstream-common/tests/: test_dag_model.py  test_object_store.py  test_schema_registry.py  test_snapshot.py
workloads/: Dockerfile  pyproject.toml
workloads/tests/: test_w1_operators.py  test_w2_operators.py  test_w3_operators.py
workloads/w1/: aggregator.py  classifier.py  dag.py  join.py  normalizer.py
workloads/w2/: dag.py  detector.py  pattern.py  zone_agg.py
workloads/w3/: anomaly.py  compliance.py  dag.py  risk.py  stat_agg.py
(+155 files in other folders)
