[tool.poetry]
name = "hybridstream-aode"
version = "0.1.0"
description = "HybridStream Adaptive Offloading Decision Engine"
packages = [{include = "aode"}]

[tool.poetry.dependencies]
python = "^3.12"
hybridstream-common = {path = "../hybridstream-common", develop = true}
grpcio = "1.58.0"
grpcio-tools = "1.58.0"
protobuf = ">=4.25.0"
etcd3 = "^0.12"
pydantic = "^2.0"
pydantic-settings = "^2.0"
numpy = "^1.26"
scipy = "^1.12"
asyncio-mqtt = "^0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["..", "."]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridstream-aode"
version = "0.1.0"
description = "HybridStream Adaptive Offloading Decision Engine"
requires-python = ">=3.12"
dependencies = [
    "hybridstream-common",
    "grpcio==1.62.0",
    "grpcio-tools==1.62.0",
    "etcd3>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "asyncio-mqtt>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["aode*"]
exclude = ["tests*"]
