[tool.poetry]
name = "hybridstream-experiments"
version = "0.1.0"
description = "HybridStream experimental evaluation harness"
packages = [
    {include = "harness"},
    {include = "metrics"},
    {include = "analysis"},
]

[tool.poetry.dependencies]
python     = "^3.12"
numpy      = "^1.26"
scipy      = "^1.12"
pandas     = "^2.2"
pyarrow    = "^15.0"
matplotlib = "^3.8"
seaborn    = "^0.13"
aiokafka   = "^0.10"
psutil     = "^5.9"
pydantic   = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest         = "^8.0"
pytest-asyncio = "^0.23"

[tool.pytest.ini_options]
asyncio_mode = "auto"
