[tool.poetry]
name = "hybridstream-hea"
version = "0.1.0"
description = "HybridStream Edge Agent"
packages = [{include = "hea"}]

[tool.poetry.dependencies]
python = "^3.12"
hybridstream-common = {path = "../hybridstream-common", develop = true}
grpcio = "1.62.0"
grpcio-tools = "1.62.0"
aiokafka = "^0.10"
aioboto3 = "^13.0"
rocksdict = "^0.8"
pydantic = "^2.0"
pydantic-settings = "^2.0"
psutil = "^5.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
