[tool.poetry]
name = "hybridstream-hea"
version = "0.1.0"
description = "HybridStream Edge Agent"
packages = [{include = "hea"}]

[tool.poetry.dependencies]
python = "^3.12"
hybridstream-common = {path = "../hybridstream-common", develop = true}
grpcio = "1.58.0"
grpcio-tools = "1.58.0"
protobuf = ">=4.25.0"
aiokafka = "^0.10"
aioboto3 = "^13.0"
rocksdict = "^0.8"
pydantic = "^2.0"
pydantic-settings = "^2.0"
psutil = "^5.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridstream-hea"
version = "0.1.0"
description = "HybridStream Edge Agent"
requires-python = ">=3.12"
dependencies = [
    "hybridstream-common",
    "grpcio==1.62.0",
    "grpcio-tools==1.62.0", 
    "aiokafka>=0.10",
    "aioboto3>=13.0",
    "rocksdict>=0.3.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["hea*"]
exclude = ["tests*"]
