[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridstream-common"
version = "0.1.0"
description = "Shared utilities for HybridStream components"
requires-python = ">=3.12"
dependencies = [
    "msgpack>=1.0",
    "aioboto3>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["hybridstream*"]
