[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybridstream-workloads"
version = "0.1.0"
description = "HybridStream synthetic evaluation workloads (W1, W2, W3)"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.10",
    "numpy>=1.26",
    "scipy>=1.12",
    "msgpack>=1.0",
    "hybridstream-common",
    "hea",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["w1*", "w2*", "w3*", "generators*"]
exclude = ["tests*"]